# Capture-CPP

./: .gitignore  CMakeLists.txt  CaptureApplication.cpp  CaptureApplication.h  CaptureApplication.ui  ColorItem.cpp  ColorItem.h  Dian-capture.pri  Dian-capture.pro  Dian-capture.qrc  Dian-capture.rc  LICENSE  PointSizeWidget.cpp  README.md  RectPaint.h  ResultWindow.cpp  ResultWindow.h  TextPaint.cpp  imageview.cpp  imageview.h  localconfig.cpp  localconfig.h  main.cpp  qxtglobal.h  screenview.cpp  screenview.h  struct.h
ocr/: api.py  main.py  requirements.txt  test_main.http
translation/: capture_en.qm  capture_en.ts  capture_zh.qm  capture_zh.ts
